@@ -1,3 +1,7 @@
+2008-09-07  Hui Zhu  <teawater@gmail.com>
+
+	* record.c (record_wait): Add code to deal with record_first.
+
 2008-09-06  Michael Snyder  <msnyder@vmware.com>
 
 	* record-linux.c: Comment and message string cleanup.
